# opencv_camera

./: .gitignore  .gitmodules  .metadata  README.md  ffigen.yaml  pubspec.yaml  test.cmake
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: camera.dart  opencv_camera.dart  opencv_camera_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  opencv_camera.cpp  opencv_camera.h
windows/: CMakeLists.txt
